odstraneni nepotrebnych vecí + adresa staci jen street a city

--- a/index.html
+++ b/index.html
@@ -125,45 +125,14 @@
 			<div class="footer-top">
 				<div class="footer-content">
 					<div class="company-contact">
-						<h3>Freightily</h3>
+						<h3>Nohe</h3>
 						<ul>
 							<li><span class="glyphicon glyphicon-earphone"></span><span>00 420 645 854 215</span></li>
-							<li><span class="glyphicon glyphicon-envelope"></span><span>info@freightily.com</span></li>
-							<li class="social-icons">
-								<span class="fa fa-facebook"></span>
-								<span class="fa fa-youtube"></span>
-								<span class="fa fa-linkedin"></span>
-							</li>
+							<li><span class="glyphicon glyphicon-envelope"></span><span>info@nohe.cz</span></li>
 						</ul>
-					</div>
-					<div class="company-about">
-						<h3>{{'texts.about_company' | i18next}}</h3>
-						<ul>
-							<li><span class="glyphicon glyphicon-menu-right"></span><span>Pro média</span></li>
-							<li><span class="glyphicon glyphicon-menu-right"></span><span>Kariéra</span></li>
-							<li><span class="glyphicon glyphicon-menu-right"></span><span>Kontakty</span></li>
-							<li><span class="glyphicon glyphicon-menu-right"></span><span>Přehled služeb</span></li>
-							<li><span class="glyphicon glyphicon-menu-right"></span><span>FAQ</span></li>
-							<li><span class="glyphicon glyphicon-menu-right"></span><span>Poradna</span></li>
-							<li><span class="glyphicon glyphicon-menu-right"></span><span>Obchodní podmínky</span></li>
-							<li><span class="glyphicon glyphicon-menu-right"></span><span>Možnosti platby</span></li>
-						</ul>
-						<!--<div class="payment-gateway">-->
-							<!--PAY PAL, VISA-->
-						<!--</div>-->
 					</div>
 				</div>
 			</div>
-			<div class="footer-bottom">
-				<div class="copyright">
-					© 2017 FREIGHTILY s.r.o.
-				</div>
-				<div class="studio">
-					<span>{{'texts.footer_text' | i18next}}</span>
-				</div>
-			</div>
-			<!--<iframe src="http://walrus.gmc.net/workhours/WorkHours.aspx?month_year=201610&user=MMe" width="800" height="900">-->
-			<!--</iframe>-->
 		</footer>
 	</body>
 </html>
