--- a/app/shared/directives/Menu/menuDirective.html
+++ b/app/shared/directives/Menu/menuDirective.html
@@ -25,13 +25,13 @@
         </div>
     </div>
     <div class="menu-vertical col-md-2" ng-if="aboveRoute == 'shipments'">
-        <div class="tab"ui-sref="new_shipments" ng-class="underRoute == 'overview' ? 'active' : null" >
+        <div class="tab"ui-sref="new_shipments" ng-class="underRoute == 'new' ? 'active' : null" >
             {{'texts.tab.new' | i18next}}
         </div>
-        <div class="tab"ui-sref="in_progress_shipments" ng-class="underRoute == 'overview' ? 'active' : null" >
+        <div class="tab"ui-sref="in_progress_shipments" ng-class="underRoute == 'in_progress' ? 'active' : null" >
             {{'texts.tab.in_progress' | i18next}}
         </div>
-        <div class="tab"ui-sref="finished_shipments" ng-class="underRoute == 'overview' ? 'active' : null" >
+        <div class="tab"ui-sref="finished_shipments" ng-class="underRoute == 'finished' ? 'active' : null" >
             {{'texts.tab.finished' | i18next}}
         </div>
     </div>
