--- a/app/shared/directives/detailAuctionDirective.html
+++ b/app/shared/directives/detailAuctionDirective.html
@@ -69,30 +69,26 @@
         <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.auction.history_amount' | i18next}}</h2>
         <div ng-if="history.length > 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="history-header row">
-                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                    #
-                </div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                    {{'texts.username' | i18next}}
-                </div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">#</div>
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                     {{'texts.date' | i18next}}
                 </div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                     {{'texts.amount' | i18next}}
                 </div>
             </div>
             <div class="history-list">
                 <div class="history-list-item row"  ng-repeat="item_history in history">
+                    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
                     <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                        {{$index + 1}}
+                        {{$index +1}}
                     </div>
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                        {{item_history.user_img}}
-                    </div>
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                         {{item_history.date}}
                     </div>
+                    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
                     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                         {{item_history.amount}}
                     </div>
