-zobrazeni ceny u shipmentu -stylovani detailu aukce a shipmentu

--- a/app/shared/directives/detailShipmentDirective.html
+++ b/app/shared/directives/detailShipmentDirective.html
@@ -5,13 +5,15 @@
     <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2"><span>{{item.to.city}}</span></div>
     <div class="auction-label col-xs-12">{{'texts.auction.freight_type.label' | i18next}}</div>
     <div class="auction-cell col-xs-12 col-sm-4 col-md-4 col-lg-4"><span>{{vm.getFreightType(item.freight.freight_type)}}</span></div>
+    <div class="auction-label col-xs-12">{{'texts.auction.price' | i18next}}</div>
+    <div class="auction-cell col-xs-12 col-sm-4 col-md-4 col-lg-4"><span>{{item.price}}</span></div>
 </div>
 <div class="auction-button-detail col-xs-12 col-sm-3 col-md-3 col-lg-2">
     <div class="my-button normal-button" ng-click="toggleDetail()"><span>{{'texts.auction.detail' | i18next}}</span></div>
 </div>
 <div ng-show="show" class="auction-detail popover bottom col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="arrow"></div>
-    <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
+    <div class="auction-detail-item col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.auction.from' | i18next}}</h2>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="detail-label col-xs-3 col-sm-4 col-md-4 col-lg-4"><span>{{'texts.address_city' | i18next}}:</span></div>
@@ -22,7 +24,7 @@
             <div class="detail-content col-xs-9 col-sm-8 col-md-8 col-lg-8"><span>{{item.from.street}}</span></div>
         </div>
     </div>
-    <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
+    <div class="auction-detail-item col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.auction.to' | i18next}}</h2>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="detail-label col-xs-3 col-sm-4 col-md-4 col-lg-4"><span>{{'texts.address_city' | i18next}}:</span></div>
@@ -33,23 +35,23 @@
             <div class="detail-content col-xs-9 col-sm-8 col-md-8 col-lg-8"><span>{{item.to.street}}</span></div>
         </div>
     </div>
-    <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
+    <div class="auction-detail-item col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.about_freight' | i18next}}</h2>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="detail-label col-xs-3 col-sm-4 col-md-4 col-lg-4"><span>{{'texts.auction.freight_description' | i18next}}:</span></div>
-            <div class="detail-content col-xs-9 col-sm-8 col-md-8 col-lg-8"><span>{{item.freight.freight_description}}</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-5 col-lg-5"><span>{{'texts.auction.freight_description' | i18next}}:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-7 col-lg-7"><span>{{item.freight.freight_description}}</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="detail-label col-xs-3 col-sm-4 col-md-4 col-lg-4"><span>{{'texts.auction.freight_type.label' | i18next}}:</span></div>
-            <div class="detail-content col-xs-9 col-sm-8 col-md-8 col-lg-8"><span>{{vm.getFreightType(item.freight.freight_type)}}</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-5 col-lg-5"><span>{{'texts.auction.freight_type.label' | i18next}}:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-7 col-lg-7"><span>{{vm.getFreightType(item.freight.freight_type)}}</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="detail-label col-xs-3 col-sm-4 col-md-4 col-lg-4"><span>{{'texts.auction.freight_size' | i18next}}:</span></div>
-            <div class="detail-content col-xs-9 col-sm-8 col-md-8 col-lg-8"><span>{{item.freight.freight_size}}</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-5 col-lg-5"><span>{{'texts.auction.freight_size' | i18next}}:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-7 col-lg-7"><span>{{item.freight.freight_size}}</span></div>
         </div>
         <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="detail-label col-xs-3 col-sm-4 col-md-4 col-lg-4"><span>{{'texts.auction.freight_weight' | i18next}}:</span></div>
-            <div class="detail-content col-xs-9 col-sm-8 col-md-8 col-lg-8"><span>{{item.freight.freight_weight}}</span></div>
+            <div class="detail-label col-xs-3 col-sm-4 col-md-5 col-lg-5"><span>{{'texts.auction.freight_weight' | i18next}}:</span></div>
+            <div class="detail-content col-xs-9 col-sm-8 col-md-7 col-lg-7"><span>{{item.freight.freight_weight}}</span></div>
         </div>
     </div>
     <div ng-if="!finishedShipment" class="my-button important-button stop-shipment" ng-click="vm.stopShipment(item.ID)">
