-zpraveni comba pro razeni nebo datepickeri

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			</div>
 		</header>
 		<div class="middle" ng-open="afterRender()">
-			<div class="content" ui-view></div>
+			<div class="row content" ui-view></div>
 			<div id="message"></div>
 		</div>
 		<footer>
