-zmena GeoAutocompleta funkce -lokalizace spatne zadanych addres -validace adresy

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 		<script src="/node_modules/lodash/lodash.js"></script>
 		<script src="/node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="/node_modules/restangular/src/restangular.js"></script>
-		<script src="/node_modules/angular-ui-notification/dist/angular-ui-notification.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-sanitize.min.js"></script>
 		<script type="text/javascript" src="/js/i18next-1.10.1.min.js"></script>
 		<script src="/js/ng-i18next.js"></script>
@@ -74,11 +73,10 @@
 
 		<!-- Google Maps JavaScript API -->
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyDv7qv63UymYWbSAL1m8ZRgYOj9yyrifxE"></script>
-		<!-- vsGoogleAutocomplete -->
-		<script src="/node_modules/vsGoogleAutocomplete/dist/vs-google-autocomplete.js"></script>
+		<!-- autocomplete google -->
+		<script src="/node_modules/geocomplete/jquery.geocomplete.js"></script>
 
 		<!-- Styles -->
-		<link rel="stylesheet" href="/node_modules/angular-ui-notification/dist/angular-ui-notification.css" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css" />
 		<link rel="stylesheet" href="/node_modules/bootstrap-social/bootstrap-social.css" />
