--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+		<link rel="icon" type="image/png"  href="images/favicon.png">
+
 		<!-- scripts from NPM -->
 		<script src="/node_modules/jquery/dist/jquery.js"></script>
 		<script src="/node_modules/jquery-simple-timer/jquery.simple.timer.js"></script>
