--- a/app/shared/directives/detailAuctionDirective.html
+++ b/app/shared/directives/detailAuctionDirective.html
@@ -91,25 +91,27 @@
             {{'texts.no_amounts' | i18next}}
         </div>
     </div>
-    <div ng-if="withBids && !expired" class="auction-detail-item auction-bid col-xs-12 col-sm-12 col-md-8 col-lg-6">
-        <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.want_bid' | i18next}}</h2>
-        <div class="has-feedback has-feedback-left col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <input type="text" ng-model="bid" class="form-control my-input bid" placeholder="{{'texts.bid' | i18next}}"/>
-            <i class="glyphicon glyphicon-lock form-control-feedback"></i>
+    <div ng-if="!user.isSender()">
+        <div ng-if="withBids && !expired" class="auction-detail-item auction-bid col-xs-12 col-sm-12 col-md-8 col-lg-6">
+            <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.want_bid' | i18next}}</h2>
+            <div class="has-feedback has-feedback-left col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                <input type="text" ng-model="bid" class="form-control my-input bid" placeholder="{{'texts.bid' | i18next}}"/>
+                <i class="glyphicon glyphicon-lock form-control-feedback"></i>
+            </div>
+            <span class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                <timer countdown="item.secondsToEndAuction" max-time-unit="'day'" interval="1000">{{days}} D, {{hours}}:{{minutes}}:{{seconds}}</timer>
+            </span>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                <div class="my-button important-button" ng-click="vm.bidAuction(bid)"><span>{{'texts.bid' | i18next}}</span></div>
+            </div>
         </div>
-        <span class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <timer countdown="item.secondsToEndAuction" max-time-unit="'day'" interval="1000">{{days}} D, {{hours}}:{{minutes}}:{{seconds}}</timer>
-        </span>
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <div class="my-button important-button" ng-click="vm.bidAuction(bid)"><span>{{'texts.bid' | i18next}}</span></div>
-        </div>
-    </div>
-    <div ng-if="expired" class="auction-detail-item auction-bid col-xs-12 col-sm-12 col-md-8 col-lg-6">
-        <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.auction_complete' | i18next}}</h2>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="auction-result">
-                <span ng-if="win" class="win">{{'texts.auction_win' | i18next}}</span>
-                <span ng-if="!win" class="lose">{{'texts.auction_lose' | i18next}}</span>
+        <div ng-if="expired" class="auction-detail-item auction-bid col-xs-12 col-sm-12 col-md-8 col-lg-6">
+            <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.auction_complete' | i18next}}</h2>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="auction-result">
+                    <span ng-if="win" class="win">{{'texts.auction_win' | i18next}}</span>
+                    <span ng-if="!win" class="lose">{{'texts.auction_lose' | i18next}}</span>
+                </div>
             </div>
         </div>
     </div>
