-logo odkazuje na aukci (home)

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		</div>
 		<header>
 			<div class="header-top">
-				<img src="../images/nohelogo2.svg" ng-if="!isLoggedAdmin()" class="header-logo" alt="FREIGHTILY LOGO" ui-sref="home" />
+				<img src="../images/nohelogo2.svg" ng-if="!isLoggedAdmin()" class="header-logo" alt="FREIGHTILY LOGO" ui-sref="auction" />
 				<img src="../images/nohelogo2.svg" ng-if="isLoggedAdmin()" class="header-logo" alt="FREIGHTILY LOGO" ui-sref="users" />
 				<div class="languages">
 					<ul>
