-uprava loc. hlasek

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<div class="company-contact">
 						<h3>Nohe</h3>
 						<ul>
-							<li><span class="glyphicon glyphicon-earphone"></span><span>00 420 645 854 215</span></li>
+							<li><span class="glyphicon glyphicon-earphone"></span><span>+420 607 605 908</span></li>
 							<li><span class="glyphicon glyphicon-envelope"></span><span>info@nohe.cz</span></li>
 						</ul>
 					</div>
