--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 		<script src="/app/components/Company/companyController.js"></script>
 		<script src="/app/components/Company/AddDriver/addDriverController.js"></script>
 		<script src="/app/components/Admin/Users/usersController.js"></script>
+		<script src="/app/components/Admin/Map/mapController.js"></script>
 
 		<!-- Directives -->
 		<script src="/app/shared/directives/detailAuctionDirective.js"></script>
