--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<script src="/node_modules/lodash/lodash.js"></script>
 		<script src="/node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="/node_modules/restangular/src/restangular.js"></script>
+        <script src="/node_modules/ng-dialog/js/ngDialog.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-sanitize.min.js"></script>
 		<script type="text/javascript" src="/js/i18next-1.10.1.min.js"></script>
 		<script src="/js/ng-i18next.js"></script>
@@ -33,7 +34,6 @@
 		<script type="text/javascript" src="/js/shared.js"></script>
 		<script type="text/javascript" src="/js/loader.js"></script>
 		<script type="text/javascript" src="/js/map.js"></script>
-		<script type="text/javascript" src="/js/routeMap.js"></script>
 
 		<!-- Main File -->
 		<script src="/app/app.js"></script>
@@ -57,10 +57,10 @@
 		<script src="/app/components/Auction/WinAuction/winAuctionController.js"></script>
 		<script src="/app/components/Auction/BidsAuction/bidsAuctionController.js"></script>
 		<script src="/app/components/Shipments/new/newShipmentsController.js"></script>
-		<script src="/app/components/Shipments/inProgress/inProgressShipmentsController.js"></script>
 		<script src="/app/components/Shipments/finished/finishedShipmentsController.js"></script>
 		<script src="/app/components/Company/companyController.js"></script>
 		<script src="/app/components/Company/AddDriver/addDriverController.js"></script>
+		<script src="/app/components/Company/Assignment/assignmentController.js"></script>
 		<script src="/app/components/Admin/Users/usersController.js"></script>
 		<script src="/app/components/Admin/Map/mapController.js"></script>
 
@@ -85,6 +85,8 @@
 		<link rel="stylesheet" href="/node_modules/bootstrap-social/bootstrap-social.css" />
 		<link rel="stylesheet" href="/node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css" />
 		<link rel="stylesheet" href="/node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" />
+        <link rel="stylesheet" href="/node_modules/ng-dialog/css/ngDialog.min.css" />
+        <link rel="stylesheet" href="/node_modules/ng-dialog/css/ngDialog-theme-default.min.css" />
 		<!-- My Styles -->
 		<link rel="stylesheet" href="css/form.css" />
 		<link rel="stylesheet" href="css/loader.css" />
